--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,183 +1,54 @@
-body{
-    width: 205vw !important;
+.main-block .block-1 {
+    margin: 0 4.5rem !important;
 }
-.test {
-    width: 205vw !important;
-    transition: none;
-}
-.test ul {
-    display: grid;
-    transition: none;
-}
-.test ul li {
-    text-align: center;
-    margin:3rem 0 !important;
-    transition: none;
-}
-.test ul li span {
-    font-size: 1.2em !important;
-    transition: none;
-}
-header {
-    height: 25rem !important;
-}
-.block-1 img{
+.main-block .block-2 .video-play {
     width: 80% !important;
-    height: 55% !important;
-    margin:4rem 2rem !important;
 }
-.block-2 {
-    height: 450px !important;
+.footer-main {
+    display: grid !important;
+    grid-template-columns: 200px 190px;
 }
-.block-2 h1 {
-    font-size: 1em !important;
+.footer-main h4 {
+    margin-top: 3rem !important;
 }
-.block-2 p {
-    width: 85% !important;
-    font-size: 1.08em !important;
-}
-.some-text p {
-    font-size: .90em !important;
-}
-.three-post-down-stuff {
-    margin:0 2rem !important;
-    transition: .3s;
-}
-.three-post-down-stuff .img-1 {
-    margin-bottom: 2rem !important;
-}
-.three-post-down-stuff .img-2 {
-    margin-bottom: 2rem !important;
-}
-.three-post-down-stuff .img-3 {
-    margin-bottom: 2rem !important;
-}
-.three-post-down-stuff #description {
-    margin-bottom: 2rem !important;
-}
-.middle-stuff p {
-    font-size: 1.2em !important;
-}
-.middle-text-1 p{
-    font-size: 1em !important;
-}
-.center-img-slider-and-stuff .slider .slide .carousel-inner
-.carousel-item div {
-    margin-bottom: 10rem !important;
-}
-.customers h1 {
-    text-align: center;
-}
-.three-customers {
-    display: flex !important;
-    flex-direction: column;
-    grid-template-columns: 280px;
-}
-.three-customers .co-1 img{
-    width: 8rem !important;
-    margin-bottom: 1rem !important;
-    transition: 0.3s;
-}
-.three-customers .co-1 {
+.top-footer-part-1 h4 {
     width: 50% !important;
-    margin: 0  auto !important;
-    height: 28rem !important;
-    margin-bottom: 4.5rem !important;
 }
-.three-customers .co-1 p {
-    line-height: 2;
-    font-size: 1em !important;
-    margin:1rem 0 !important;
+.top-footer-part-1 li:first-child {
+    width: 40% !important;
 }
-.three-customers .co-2 img{
-    width: 8rem !important;
-    margin-bottom: 1rem !important;
-    transition: 0.3s;
+.top-footer-part-1 li:nth-child(2) {
+    width: 60% !important;
 }
-.three-customers .co-2 {
+.top-footer-part-1 li:nth-child(3) {
     width: 50% !important;
-    height: 28rem !important;
-    margin:0 auto !important;
-    margin-bottom: 4.5rem !important;
 }
-.three-customers .co-2 p {
-    font-size: 1em !important;
-    margin:0 1rem !important;
+.top-footer-part-1 li:nth-child(4) {
+    width: 20% !important;
 }
-.three-customers .co-3 img{
-    width: 8rem !important;
-    margin-bottom: 1rem !important;
-    transition: 0.3s;
+.top-footer-part-1 li:nth-child(5) {
+    width: 30% !important;
 }
-.three-customers .co-3 {
+.top-footer-part-2 h4 {
+    width: 40% !important;
+}
+.top-footer-part-3 h4 {
+    width: 60% !important;
+    margin: 2rem 1rem !important;
+}
+.top-footer-part-4 h4 {
     width: 50% !important;
-    height: 25rem !important;
-    margin:0 auto !important;
-    margin-bottom: 4.5rem !important;
-}
-.three-customers .co-3 p {
-    font-size: 1em !important;
-    margin:0 1rem !important;
-}
-.down-text p {
-    width: 70% !important;
-    font-size: 1.3em !important;
-    margin-bottom: 5rem !important;
-}
-.image-and-star {
-    display: flex;
-    flex-wrap: wrap;
-}
-.top-footer-part-1 ul {
-    margin: 0 1.5rem !important;
-}
-.top-footer-part-2 ul {
-    margin: 0 1.5rem !important;
-}
-.top-footer-part-1 ul li:first-child {
-    width: 35% !important;;
-}
-.top-footer-part-1 ul li:nth-child(2) {
-    width: 65% !important;;
-}
-.top-footer-part-1 ul li:nth-child(3) {
-    width: 50% !important;;
-}
-.top-footer-part-1 ul li:nth-child(4) {
-    width: 25% !important;;
-}
-.top-footer-part-1 ul li:nth-child(5) {
-    width: 30% !important;;
-}
-.top-footer-part-2 ul li:first-child {
-    width: 70% !important;;
-}
-.top-footer-part-2 ul li:nth-child(2) {
-    width: 60% !important;;
-}
-.top-footer-part-2 ul li:nth-child(3) {
-    width: 50% !important;;
-}
-.top-footer-part-2 ul li:nth-child(4) {
-    width: 45% !important;;
-}
-.top-footer-part-2 ul li:nth-child(5) {
-    width: 60% !important;;
-}
-footer  .footer-main h4{
-    font-size: 1.5em !important;
-}
-.footer-main ul {
-    font-size: 1.5em !important;
-}
-.top-footer-part-3 p {
-    font-size: 1.2em !important;
-    margin: 0 2rem !important;
-    line-height: 4;
 }
 .top-footer-part-4 p {
-    margin: 2rem .5rem !important;
+    width: 80% !important;
 }
-.footer-end ul li {
-    font-size: 2em !important;
+.top-footer-part-4 .form {
+    width: 10rem !important;
+    border: none !important; 
+}
+.top-footer-part-4 .form input {
+    margin-bottom: 1rem !important;
+}
+footer .footer-end p:first-child {
+    width: 20rem !important;
 }
